--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ Django==5.2.6
 django-cors-headers==4.9.0
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
+gunicorn==23.0.0
 idna==3.10
+packaging==25.0
 pillow==11.3.0
 psycopg==3.2.10
 psycopg-binary==3.2.10
