--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ DB_PASSWORD=9382
 DB_HOST=localhost
 DB_PORT=5432
 AUTH_USER_MODEL=users.CustomUser
+DATABASE_URL=postgres://anketalaruser:9382@dpg-crq2l1234abc1234b.eu-central-1.render.com:5432/anketalar
