--- a/.env
+++ b/.env
@@ -7,3 +7,13 @@ DB_HOST=localhost
 DB_PORT=5432
 AUTH_USER_MODEL=users.CustomUser
 DATABASE_URL=postgres://anketalaruser:9382@dpg-crq2l1234abc1234b.eu-central-1.render.com:5432/anketalar
+
+EMAIL_HOST_USER=firuzovichs@gmail.com
+EMAIL_HOST_PASSWORD=vrup aazu akif lonu
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USE_TLS=True
+
+TELEGRAM_BOT_TOKEN=7930208506:AAHUgWkZzjZYLG2Br9VQOsi-F8r6Aeg3i5g
+TELEGRAM_USER_ID1=6264055381
+TELEGRAM_USER_ID2=6264055381
